--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,16 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: azmanov # the main title
+title: Victor Elgersma
 
-tagline: Victor Elgersma's blog # it will display as the subtitle
+tagline: blog
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Victor Elgersma's personal blog
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: 'https://victorelgersma.github.io'
+url: 'http://91.98.78.255'
 
 github:
   username: victorelgersma # change to your GitHub username
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: '/blog'
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -209,10 +209,15 @@ exclude:
   - "*.gem"
   - "*.gemspec"
   - docs
+  - create_new_post.rb
   - tools
   - README.md
   - LICENSE
   - purgecss.js
+  - TODO
+  - build.sh
+  - run_dev.sh
+  - scp.sh
   - "*.config.js"
   - "package*.json"
 
